--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </div>
         </div>
         <div class="new-text">
-          <h3><a href="stands/TheWorld.html">The World</h3>
+          <h3><a href="stands/TheWorld.html">The World</a></h3>
           <p>DIO</p>
         </div>
       </div>
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="new-text">
-          <h3><a href="stands/SilverChariot.html">Silver Chariot</h3>
+          <h3><a href="stands/SilverChariot.html">Silver Chariot</a>a</h3>
           <p>Jean Pierre Polnareff</p>
         </div>
       </div>
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="new-text">
-          <h3><a href="childpages/template.html">Magician's Red</h3>
+          <h3><a href="childpages/template.html">Magician's Red</a></h3>
           <p>Muhammad Avdol</p>
         </div>
       </div>
