--- a/stands/StarPlatnium.html
+++ b/stands/StarPlatnium.html
@@ -6,6 +6,7 @@
       integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
       crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="/Images/Jojo-icon.png">
     <meta charset="utf-8">
     <title>Star Platnium</title>
   </head>
@@ -50,11 +51,11 @@
           <h2><u>Abilitys</h2></u>
           <h4 div class="herotitle">ORA Barrage</h4>
           <p>Star Platnium does a barrage of fast punches/kicks inflicting heavy damage to the opponent.</p>
-            <img src="/Images/SPbend.gif" alt="Smiley face" style="float:center;width:300px;height:200px;">
+            <img src="/Images/SPbend.gif" alt="" style="float:center;width:300px;height:200px;">
           <h4 div class="herotitle">Star Finger</h4>
           <p>Star platnium extends his middle and index finger to stab their oppenet from afar. This ability is only used when the user is immobilized</p>
-            <img src="/Images/Starfinger.gif" alt="Smiley face" style="float:center;width:px;height:200px;">
-          <h4 div class="herotitle">Star Platnium: The World</h4>
+            <img src="/Images/Starfinger.gif" alt="" style="float:center;width:px;height:200px;">
+          <h4 div class="herotitle">Time Stop</h4>
           <p>In his prime (Part 4) Star Platnium could stop time for 5 secounds. In part 5 he could only stop time for 0.5 - 2 secounds.
             At the start of part 6 he could time stop for 2 secounds but at the end it extended to 5 secounds.</p>
           <p>Similar to The Worlds time stop, Jotaro Kujo can freely move and the objects he touches.</p>
