--- a/stands/SilverChariot.html
+++ b/stands/SilverChariot.html
@@ -6,6 +6,7 @@
       integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
       crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="/Images/Jojo-icon.png">
     <meta charset="utf-8">
     <title>Silver Chariot</title>
   </head>
