--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="new-text">
-          <h3><a href="stands/SilverChariot.html">Silver Chariot</a>a</h3>
+          <h3><a href="stands/SilverChariot.html">Silver Chariot</a></h3>
           <p>Jean Pierre Polnareff</p>
         </div>
       </div>
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="new-text">
-          <h3><a href="childpages/template.html">Magician's Red</a></h3>
+          <h3><a href="stands/Magiciansred.html">Magician's Red</a></h3>
           <p>Muhammad Avdol</p>
         </div>
       </div>
@@ -97,22 +97,10 @@
           </div>
         </div>
         <div class="new-text">
-          <h3><a href="childpages/template.html">Hermit Purple</a></h3>
+          <h3><a href="stands/HermitPurple.html">Hermit Purple</a></h3>
           <p>Jospeh Joestar</p>
         </div>
       </div>
-      <div class="new">
-        <div class="new-image char-6">
-          <div class="top-but">
-            <p>Anime</p>
-          </div>
-        </div>
-        <div class="new-text">
-          <h3><a href="childpages/template.html">Hierophant Green</a></h3>
-          <p>Noriaki kakyoin</p>
-        </div>
-      </div>
-    </div>
   </section>
   <section>
     <div class="title">
@@ -149,13 +137,6 @@
       </div>
       <div class="new2">
         <div class="new-image2 char-11">
-          <div class="top-but">
-            <p>Manga</p>
-          </div>
-        </div>
-      </div>
-      <div class="new2">
-        <div class="new-image2 char-12">
           <div class="top-but">
             <p>Manga</p>
           </div>
