--- a/stands/SilverChariot.html
+++ b/stands/SilverChariot.html
@@ -57,13 +57,13 @@
           <hr class="rounded">
         </div>
       </div>
-      <div class="gallery">
+      <div class="">
         <img src="../Images/SilverChariot2.png" alt="">                                                                                                      >
         </a>
         <div class="desc"><b>Stand:</b> Silver Chariot</div>
         <div class="desc"><b>User:</b> Jean Pierre Polnareff</div>
         <div class="desc"><b>Type:</b> Close Range
-          <div class="desc"><b>Stand Cry:</b> HORA HORA HORA</div>
+          <div class="desc"><b>Stand Cry:</b> "HORA HORA HORA"</div>
           <audio controls>
             <source src="../Media/SC.mp3" type="audio/ogg">
         </div>
