--- a/stands/StarPlatnium.html
+++ b/stands/StarPlatnium.html
@@ -63,7 +63,7 @@
           <hr class="rounded">
         </div>
       </div>
-      <div class="gallery">
+      <div class="">
         <img src="../Images/StarPlatinumS.png" alt="">                                                                                                        >
         </a>
         <div class="desc"><b>Stand:</b> Star Platnium</div>
