--- a/stands/TheWorld.html
+++ b/stands/TheWorld.html
@@ -60,13 +60,13 @@
           <hr class="rounded">
         </div>
       </div>
-      <div class="gallery">
+      <div class="">
         <img src="../Images/TheWorld2.png" alt="">                                                                                                      >
         </a>
         <div class="desc"><b>Stand:</b> The World</div>
         <div class="desc"><b>User:</b> DIO (Dio Brando)</div>
         <div class="desc"><b>Type:</b> Close Range
-          <div class="desc"><b>Stand Cry:</b> MUDA MUDA MUDA</div>
+          <div class="desc"><b>Stand Cry:</b> "MUDA MUDA MUDA"</div>
           <audio controls>
             <source src="../Media/TW.mp3" type="audio/ogg">
         </div>
