--- a/stands/magiciansred.html
+++ b/stands/magiciansred.html
@@ -1,10 +1,74 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<lang="en" dir="ltr">
+
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="/Images/Jojo-icon.png">
     <meta charset="utf-8">
-    <title>Child Page Template</title>
+    <title>Magician's Red</title>
   </head>
-  <body>
-    Magician's red
+  <html>
+
+  <body class="hero-background">
+    <nav class="navbar">
+      <div class="container-logo">
+        <img src="../Images/jojo-logo.png" alt="">
+      </div>
+      <ul class="nav-bar-ctn">
+        <li>
+          <a href="../index.html">Home</a>
+        </li>
+        <li>
+          <a href="">Characters</a>
+        </li>
+        <li>
+          <a href="">Info</a>
+        </li>
+        <li>
+          <a href="">More</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="all-ctn">
+      <div class="herotitle">
+        <div class="center">
+          <p style="width: 1000px;"><b>Magician's Red is a stand of Muhammad Avdol, its a humanoid stand with a bird as its head. It can manipulate scorching hot flames in variouse ways 
+            to defeat his eneimies</p></b>
+            <hr class="rounded">
+          <h2><u>Appearance</h2></u>
+          <p>Magician's Red is a hybrid of a human and a phoenix bird head, its upper-body is very well built, Its wrist and entire legs are wrapped with dark flames (the legs are feathered when not in flames), and has claws instead of nails. 
+            Orginally the Stand was barefooted but later wears Aabian footwear. 
+          </p>
+          <hr class="rounded">
+          <h2><u>Abilitys</h2></u>
+          <h4 div class="herotitle">Cross Fire Hurricane</h4>
+          <p>Magician's Red fires a few fireball projectiles shaped like nakhs from its mouth in a great storm. It can also spilt the ankhs to cover a wider area. 
+            Avdol was able to maneuver these projectiles for sneak attacks by manipualting individual flames </p>
+            <img src="/Images/MRhurricane.gif" alt="" style="float:center;width:350px;height:200px;">
+            <img src="/Images/MRhurricane2.gif" alt="" style="float:center;width:350px;height:200px;">
+          <h4 div class="herotitle">Red Bind</h4>
+          <p> Magician's Red can imboilize his opponent by tying them like a rope with his flames. If his flames are close to the eneimes face, the oxygen around it will evuntally be burned,
+            thus suffocating them.</p>
+            <img src="/Images/MRbind.gif" alt="" style="float:center;width:px;height:200px;">
+            <h4 div class="herotitle">Life Detector</h4>
+            <p>Magician's Red produces a cruciform mass of flames poiting north, west, south, east, up, and down with flames at each tip. These flames can 
+              detect movement, breathing, and stan energy within a 15 meter radius. When it detectts something the flames corresponding direction will grow bigger</p>
+              <img src="/Images/MRlife.gif" alt="" style="float:center;width:px;height:200px;">
+          <hr class="rounded">
+        </div>
+      </div>
+      <div class="">
+        <img src="../Images/MagiciansRed2.png" alt="">                                                                                                      >
+        </a>
+        <div class="desc"><b>Stand:</b> Magician's Red</div>
+        <div class="desc"><b>User:</b> Muhammad Avdol</div>
+        <div class="desc"><b>Type:</b> Close Range
+        </div>
+      </div>
+    </div>
   </body>
-</html>
+
+  </html>
