--- a/stands/HermitPurple.html
+++ b/stands/HermitPurple.html
@@ -1,10 +1,80 @@
-<<!DOCTYPE html>
-<html lang="en" dir="ltr">
+<!DOCTYPE html>
+<lang="en" dir="ltr">
+
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="icon" href="/Images/Jojo-icon.png">
     <meta charset="utf-8">
-    <title>Child Page Template</title>
+    <title>Hermit Purple</title>
   </head>
-  <body>
-    Hermit Purple
+  <html>
+
+  <body class="hero-background">
+    <nav class="navbar">
+      <div class="container-logo">
+        <img src="../Images/jojo-logo.png" alt="">
+      </div>
+      <ul class="nav-bar-ctn">
+        <li>
+          <a href="../index.html">Home</a>
+        </li>
+        <li>
+          <a href="">Characters</a>
+        </li>
+        <li>
+          <a href="">Info</a>
+        </li>
+        <li>
+          <a href="">More</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="all-ctn">
+      <div class="herotitle">
+        <div class="center">
+          <p style="width: 1000px;"><b>Hermit Purple is the stand of Joseph Joestar. A vine-like stand summoned from
+              their hands, mainly used to divine
+              information and messages from other locations
+          </p></b>
+          <hr class="rounded">
+          <h2><u>appearance</h2></u>
+          <p>Hermit purple is a thorn-covered vine in the color of purple. Multiple vines come out when spawned from the
+            hand that covers
+            Josephs hand. Its strong enough to support his own weight and bind someone as well.</p>
+          <hr class="rounded">
+          <h2><u>Abilitys</h2></u>
+          <h4 div class="herotitle">Divination</h4>
+          <p>Hermit Purple can aquire information by using objects or material to gain info. Joseph smashed a camera to
+            show a photograph of a person or even a place.
+            He then used it on a tv being able to broadcast a persons thought or film a place.</p>
+          <img src="/Images/HPsmash.gif" alt="" style="float:center;width:300px;height:200px;">
+          <img src="/Images/HPtv.gif" alt="" style="float:center;width:300px;height:200px;">
+          <h4 div class="herotitle">Eletronic Manipulation</h4>
+          <p>Aside from gathering information, Hermit Purple can also tamper with eletronics. Using he's ability, he was
+            able to take control of a Cessna's system, forcing it to stabilize
+            to prevent crashing.</p>
+          <img src="/Images/HPpla" alt="" style="float:center;width:px;height:200px;">
+          <h4 div class="herotitle">\]  ';;/.</h4>
+          <p>In his prime (Part 4) Star Platnium could stop time for 5 secounds. In part 5 he could only stop time for
+            0.5 - 2 secounds.
+            At the start of part 6 he could time stop for 2 secounds but at the end it extended to 5 secounds.</p>
+          <p>Similar to The Worlds time stop, Jotaro Kujo can freely move and the objects he touches.</p>
+          <img src="/Images/SPtime.gif" alt="Smiley face" style="float:center;width:px;height:200px;">
+          <hr class="rounded">
+        </div>
+      </div>
+      <div class="">
+        <img src="../Images/HermitPurple2.png" alt=""> >
+        </a>
+        <div class="desc"><b>Stand:</b> Hermit Purple</div>
+        <div class="desc"><b>User:</b> Joseph Joestar</div>
+        <div class="desc"><b>Type:</b> Close Range
+        </div>
+      </div>
+    </div>
   </body>
-</html>
+
+  </html>
